// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pb;
option go_package = ".;pb";



import "common.proto";

// 登录类型
enum LoginType {
	LoginType_NULL = 0;

	MobilePhoneId = 1;	// 手机号码
	WeChat        = 2;	// 微信
	QQ            = 3;	// QQ
	AppTest		  = 98; // app测试
	WebTest		  = 99; // web测试
}

// 注册
message CmdRegistry {
	string account = 1; // 玩家账号：手机号、微信登录的Code
	LoginType type = 2; // 登录类型
	string pwd = 3;     // 玩家密码
	string sms = 4;     // 手机验证码
	AppFrom from = 5; 	// App渠道
}

// 登录参数
message CmdLogin {
	string account = 1; // 玩家账号：手机号、微信登录的Code
	LoginType type = 2; // 登录类型
	string pwd = 3;     // 玩家密码
	AppFrom from = 4; 	// App渠道
}
// 登录响应
message CmdLoginReply {
	ErrorInfo err = 1;  // 登录结果
	int32 uid     = 2;  // 玩家ID
	string token  = 3;  // 登录成功后返回的Token，客户端可以缓存它（当断线重连时或玩家关闭App一段时间后再进入，可以使用token恢复登录，不需要去登录服务器再次登录）
	string gameAddr = 4;// 服务器做的负载均衡，给客户端分配的游戏服务器IP和端口
}

// 获取图形码
message CmdGetCaptcha {
	string account = 1; // 玩家账号：手机号
}
// 获取图形码应答
message CmdGetCaptchaReply {
	bytes captcha = 1; // 图形码（区分机器人还是人类的图灵测试）
}

// 获取短信验证码
message CmdGetSms {
	string account = 1; // 玩家账号：手机号
	string captcha = 2; // 图形码（区分机器人还是人类的图灵测试）
}

// 重新设置密码
message CmdResetPwd {
	string account = 1; // 玩家账号：手机号、微信登录的Code
	string pwd = 2;     // 新密码
	string captcha = 3; // 手机验证码或原密码
}


// Rpc service
service LoginService {
  rpc Registry (CmdRegistry) returns (ErrorInfo) {}
  rpc Login (CmdLogin) returns (CmdLoginReply) {}
  rpc GetCaptcha (CmdGetCaptcha) returns (CmdGetCaptchaReply) {}
  rpc GetSms (CmdGetSms) returns (ErrorInfo) {}
  rpc ResetPwd (CmdResetPwd) returns (ErrorInfo) {}
}